# rpmdevtools

./: .gitignore  Makefile.am  NEWS  README.spectool  configure.ac  newspec.conf  rpmdev-bumpspec  rpmdev-checksig  rpmdev-diff  rpmdev-extract  rpmdev-newinit.in  rpmdev-newspec.in  rpmdev-packager  rpmdev-rmdevelrpms.in  rpmdev-rmdevelrpms.py  rpmdev-setuptree  rpmdev-sort  rpmdev-vercmp  rpmdev-wipetree  rpmdevtools.bash-completion.in  rpmdevtools.spec  rpminfo  spectemplate-R.spec  spectemplate-dummy.spec  spectemplate-lib.spec  spectemplate-minimal.spec  spectemplate-ocaml.spec  spectemplate-perl.spec  spectemplate-php-pear.spec  spectemplate-python.spec  spectemplate-ruby.spec  spectool  spectool.in  template.init
devscripts/: version
devscripts/scripts/: licensecheck.pl
qa-robot/: rpmargs.in  rpmelfsym  rpmfile  rpmpeek.in  rpmsodiff.in  rpmsoname  tmpdir.sh.in  trap.sh.in
